Bootstrap, font-awesome, tag helper, struttura della pagina di elenco dei corsi

--- a/src/MyCourse/.vscode/settings.json
+++ b/src/MyCourse/.vscode/settings.json
@@ -9,5 +9,9 @@
             "Views/**/*.cshtml",
             "wwwroot/**/*"
         ]
-    }
+    },
+    "fontAwesomeAutocomplete.patterns": [
+        "**/*.cshtml"
+    ],
+    "fontAwesomeAutocomplete.triggerWord": "f-"
 }
