--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -1,5 +1,17 @@
 {
     "ConnectionStrings": {
-        "MyCourse": "Data Source=Data/MyCourse.db"
+        "Default": "Data Source=Data/MyCourse.db"
+    },
+    "Courses": {
+        "PerPage": 10,
+        "Order": {
+            "By": "Rating",
+            "Ascending": false,
+            "Allow": [
+                "Title",
+                "Rating",
+                "CurrentPrice"
+            ]
+        }
     }
 }
