--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -17,6 +17,7 @@
                 "Rating",
                 "CurrentPrice"
             ]
-        }
+        },
+        "CacheExpiration": 60
     }
 }
