Aggiunta la Response Cache per la home

--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -22,5 +22,11 @@
     },
     "MemoryCache": {
         "SizeLimit": 1000
+    },
+    "ResponseCache": {
+        "Home": {
+            "Duration": 60,
+            "Location": "Client"
+        }
     }
 }
