Aggiunto il ResponseCachingMiddleware

--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -26,7 +26,10 @@
     "ResponseCache": {
         "Home": {
             "Duration": 60,
-            "Location": "Client"
+            "Location": "Client",
+            "VaryByQueryKeys": [
+                "page"
+            ]
         }
     }
 }
