--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -9,10 +9,12 @@
     },
     "Courses": {
         "PerPage": 10,
+        "InHome": 3,
         "Order": {
             "By": "Rating",
             "Ascending": false,
             "Allow": [
+                "Id",
                 "Title",
                 "Rating",
                 "CurrentPrice"
